  - Fixed a bug with date and time used on open files.
  - Added ps2 mouse-emulation in bios interrupts. (c2woody)
  - Made our XMS driver conform the specs better. (c2woody)
  - Added intelligent mpu401 emulation. (Srecko)
  - Changed sensitivity settings of the mouse.
  - Fixed a bug with an unterminated string in the drivelabel.
  - Changed file search routines a bit to be more compatible.
  - Added support for attribute-searching with fcb's
  - Changed OpenGL so that it is initialized only when used.
  - Added basic SDA.
  - Changed psp and dta functions to use dta.
  - Added some more PIC commands. (c2woody)

0.61
  - Added a beta dynamic cpu for x86 hosts (very unstable)
  - Added opengl and hardware overlay display output
  - Rewrote the vga screen updates to go in lines
  - Added paging and v86 support to cpu emulation
  - Added a config option to simulate a certain type of machine
  - Added hercules graphics emulation
  - Made CGA/TANDY modes more compatible
  - Updated textmode drawing routines to support blinking colors
  - Fixed VESA set page function that was documented wrong
  - Fixed some wrongly emulated cpu opcodes.
  - improved exception handling
  - debugger: fixes; logging of gdt,lgt,idt, new commands(Fizzban)
  - fixed some mscdex issues (drive letter header error, added get directory entry)
  - added/fixed some bios funcs
  - added some rarely used xms functions (thanks c2woody!)
  - implemented GUS emulation
  - Added 16-bit DMA support (for GUS and eventually SB16)
  - Fixed many small bugs in filehandling routines
  - Many small FPU fixes (c2woody/Fizzban)
  - Some keyboard improvements (pharlab games)
  - Some Timer and cmos/rtc fixes (Mirek/Srecko/Others)
  - Lot's of mouse fixes (Help from various people)
  - Enabled internal modem
  - Made the DOS parsing routines a bit more flexible
  - Added Subst (Srecko)
  - Added cdrom ioctl support for linux (prompt)
  - Many internal DOS fixes: memory/files/datastructures.